agrega estructura en index estilos

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
 <body>
 
+    <!-- header nav -->
+
     <nav class="navbar navbar-expand-lg   p-3">
         <div class="container-fluid">
             <div>
@@ -61,6 +63,7 @@
     <!-- carousel -->
 
     <main>
+
         <div id="carouselExampleCaptions" class="carousel slide">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -104,79 +107,243 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
+
+
+
+
+        <!-- section nuevos lanzamientos -->
+
+        <section class="section-lanzamientos">
+            <div class="card" style="width: 20rem;">
+                <img src="./img/remera-a.jpg" class="card-img-top img-card" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">remera radical crew</h5>
+                    <div class="card-buy">
+                        <p class="card-text">$5599</p>
+                        <a href="#" class="btn">Comprar</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card" style="width: 20rem;">
+                <img src="./img/remera-b.jpg" class="card-img-top img-card" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">remera radical crew</h5>
+                    <div class="card-buy">
+                        <p class="card-text">$5599</p>
+                        <a href="#" class="btn">Comprar</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card" style="width: 20rem;">
+                <img src="./img/remera-bl.jpg" class="card-img-top img-card" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">remera radical crew</h5>
+                    <div class="card-buy">
+                        <p class="card-text">$5599</p>
+                        <a href="#" class="btn">Comprar</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card" style="width: 20rem;">
+                <img src="./img/remera-v.jpg" class="card-img-top img-card" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">remera radical crew</h5>
+                    <div class="card-buy">
+                        <p class="card-text">$5599</p>
+                        <a href="#" class="btn">Comprar</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- section categorias -->
+
+        <!-- <section class="section-categorias">
+            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./img/playa-1.jpg" class="d-block w-100" alt="...">
+                        <a class="carousel__link" href="">remeras</a>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/playa-2.jpg" class="d-block w-100" alt="...">
+                        <a class="carousel__link" href="">hoodies</a>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/playa-1.jpg" class="d-block w-100" alt="...">
+                        <a class="carousel__link" href="">accesorios</a>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section> -->
+
+        <section class="section-cat">
+            <article class="row categorias__article">
+                <div class="col-sm-12 col-md-6 d-1">
+                    <img src="./img/hoodiecat.jpg" alt="buzo" class="rounded-end img-1 p-1">
+                    <div class="d-grid gap-2 col-6 mx-auto bt-1">
+                        <a class="categoria__link" href="./pages/hoodies.html">hoodies</a>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 d-2 align-items-center">
+                    <img src="./img/remerascat.jpg" alt="remera" class="rounded-start img-2 p-1">
+                    <div class="d-grid col-6 mx-auto bt-2">
+                        <a class="categoria__link" href="./pages/remeras.html">remeras</a>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12 col-md-12 d-3">
+                            <img src="./img/gorroscat.jpg" alt="gorro lana" class=" rounded-start img-2 p-1">
+                            <div class="d-grid col-6 mx-auto bt-3">
+                                <a class="categoria__link" href="./pages/accesorios.html">accesorios</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </section>
+
+<!-- pagos-envios-devoluciones -->
+
+        <section class=" mt-5 mb-5">
+            <div class="row text-center fs-2 text-uppercase beneficios">
+                <div class="card col-sm-12 col-md-4 align-items-center">
+                    <div class="card-body">
+                        <a href="#"
+                            class="card-link fa-regular fa-credit-card text-decoration-none me-3 text-black"></a>hasta 3
+                        cuotas sin interes
+                    </div>
+                </div>
+                <div class="card col-md-4 align-items-center">
+                    <div class="card-body">
+                        <a href="#" class="card-link fas fa-truck text-black text-decoration-none me-3"></a>envios
+                        gratis
+                    </div>
+                </div>
+                <div class="card col-md-4 align-items-center">
+                    <div class="card-body">
+                        <a href="#"
+                            class="card-link fas fa-regular fa-arrows-rotate text-black text-decoration-none me-3"></a>cambios
+                        y devoluciones
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
-    <!-- section -->
 
-    <section>
-        <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-        </div>
-    </section>
+    <!-- footer -->
 
-    <!-- section categorias -->
+    <div class="footer">
+        <!-- Footer -->
+        <footer class="text-center text-lg-start text-white">
+            <!-- Grid container -->
+            <div class="container p-4 pb-0">
+                <!-- Section: Links -->
+                <section class="">
+                    <!--Grid row-->
+                    <div class="row">
+                        <!-- Grid column -->
+                        <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+                            <h6 class="text-uppercase mb-4">
+                                <a class="footer__title text-white" href="./index.html">Radical Waves</a>
+                            </h6>
+                            <p class="footer__p">
+                                Radical Waves es una marca nacida en Cordoba Capital,Argentina dedicada 
+                                a la moda Surf Skate urbana,que trata de marcar un estilo propio y original.
 
-    <section>
-        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="./img/playa-1.jpg" class="d-block w-100" alt="...">
-                    <a class="carousel__link" href="">remeras</a>
-                </div>
-                <div class="carousel-item">
-                    <img src="./img/playa-2.jpg" class="d-block w-100" alt="...">
-                    <a class="carousel__link" href="">hoodies</a>
-                </div>
-                <div class="carousel-item">
-                    <img src="./img/playa-1.jpg" class="d-block w-100" alt="...">
-                    <a class="carousel__link" href="">accesorios</a>
-                </div>
+                            
+                            </p>
+                        </div>
+                        <!-- Grid column -->
+
+                        <hr class="w-100 clearfix d-md-none" />
+
+                        
+                        <!-- Grid column -->
+
+                        <hr class="w-100 clearfix d-md-none" />
+
+                        <!-- Grid column -->
+                        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+                            <h6 class="text-uppercase mb-4 categorias__title">
+                                Categorias
+                            </h6>
+                            <p class="categorias__p">
+                                <a class="text-white categorias__link">remeras</a>
+                            </p>
+                            <p class="categorias__p">
+                                <a class="text-white categorias__link">hoodies</a>
+                            </p>
+                            <p class="categorias__p">
+                                <a class="text-white categorias__link">accesorios</a>
+                            </p>
+                        </div>
+
+                        <!-- Grid column -->
+                        <hr class="w-100 clearfix d-md-none" />
+
+                        <!-- Grid column -->
+                        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+                            <h6 class="text-uppercase mb-4 contacto__title">Contacto</h6>
+                            <p class="contacto__p"><i class="fas fa-home mr-3"></i> Tupungato 1749,Cordoba,Arg</p>
+                            <p class="contacto__p"><i class="fas fa-envelope mr-3"></i> radicalwavesofficial@gmail.com</p>
+                            <p class="contacto__p"><i class="fas fa-phone mr-3"></i> 3518079787</p>
+                        </div>
+                        <!-- Grid column -->
+                    </div>
+                    <!--Grid row-->
+                </section>
+                <!-- Section: Links -->
+
+                <hr class="my-3">
+
+                <!-- Section: Copyright -->
+                <section class="p-3 pt-0">
+                    <div class="row d-flex align-items-center">
+                        <!-- Grid column -->
+                        <div class="col-md-7 col-lg-8 text-center text-md-start">
+                            <!-- Copyright -->
+                            <div class="p-3">
+                                © 2020 Copyright:
+                                Radical Waves
+                            </div>
+                            <!-- Copyright -->
+                        </div>
+                        <!-- Grid column -->
+
+                        <!-- Grid column -->
+                        <div class="col-md-5 col-lg-4 ml-lg-0 text-center text-md-end">
+                            <!-- Facebook -->
+                            <a class="btn btn-outline-light btn-floating m-1" class="text-white" role="button"><i
+                                    class="fab fa-facebook-f"></i></a>
+
+                            <!-- Instagram -->
+                            <a class="btn btn-outline-light btn-floating m-1" class="text-white" role="button"><i
+                                    class="fab fa-instagram"></i></a>
+                        </div>
+                        <!-- Grid column -->
+                    </div>
+                </section>
+                <!-- Section: Copyright -->
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
-    </section>
+            <!-- Grid container -->
+        </footer>
+        <!-- Footer -->
+    </div>
+    <!-- End of .container -->
 
 
 
