--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -18,12 +18,12 @@
 
     <!-- header nav -->
 
-    <nav class="navbar navbar-expand-lg   p-3">
+    <nav class="navbar navbar-expand-lg p-3">
         <div class="container-fluid">
             <div>
                 <img class="logo-header" src="./img/logo-negro.png" alt="">
             </div>
-            <a class="navbar-brand" href="#">radical waves</a>
+            <a class="navbar-brand align-items-center d-sm-none d-md-block" href="#">radical waves</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -31,7 +31,7 @@
 
 
             <div class=" collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav ms-auto ">
+                <ul class="navbar-nav ms-auto align align-items-center ">
                     <li class="nav__item">
                         <a class="nav__link mx-2" aria-current="page" href="#">remeras</a>
                     </li>
@@ -113,8 +113,9 @@
 
         <!-- section nuevos lanzamientos -->
 
-        <section class="section-lanzamientos">
-            <div class="card" style="width: 20rem;">
+        <section class="section-lanzamientos row">
+
+            <div class="card col-sm-12 col-md-6 col-lg-2" style="width: 20rem;">
                 <img src="./img/remera-a.jpg" class="card-img-top img-card" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">remera radical crew</h5>
@@ -125,7 +126,7 @@
                 </div>
             </div>
 
-            <div class="card" style="width: 20rem;">
+            <div class="card col-sm-12 col-md-12 col-lg-2" style="width: 20rem;">
                 <img src="./img/remera-b.jpg" class="card-img-top img-card" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">remera radical crew</h5>
@@ -136,7 +137,7 @@
                 </div>
             </div>
 
-            <div class="card" style="width: 20rem;">
+            <div class="card col-sm-12 col-md-6 col-lg-2" style="width: 20rem;">
                 <img src="./img/remera-bl.jpg" class="card-img-top img-card" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">remera radical crew</h5>
@@ -147,7 +148,7 @@
                 </div>
             </div>
 
-            <div class="card" style="width: 20rem;">
+            <div class="card col-sm-12 col-md-6 col-lg-2" style="width: 20rem;">
                 <img src="./img/remera-v.jpg" class="card-img-top img-card" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">remera radical crew</h5>
@@ -157,38 +158,13 @@
                     </div>
                 </div>
             </div>
+            </div>
+
+            </div>
+
         </section>
 
         <!-- section categorias -->
-
-        <!-- <section class="section-categorias">
-            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="./img/playa-1.jpg" class="d-block w-100" alt="...">
-                        <a class="carousel__link" href="">remeras</a>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./img/playa-2.jpg" class="d-block w-100" alt="...">
-                        <a class="carousel__link" href="">hoodies</a>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./img/playa-1.jpg" class="d-block w-100" alt="...">
-                        <a class="carousel__link" href="">accesorios</a>
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-            </div>
-        </section> -->
 
         <section class="section-cat">
             <article class="row categorias__article">
@@ -215,7 +191,7 @@
             </article>
         </section>
 
-<!-- pagos-envios-devoluciones -->
+        <!-- pagos-envios-devoluciones -->
 
         <section class=" mt-5 mb-5">
             <div class="row text-center fs-2 text-uppercase beneficios">
@@ -248,9 +224,9 @@
 
     <div class="footer">
         <!-- Footer -->
-        <footer class="text-center text-lg-start text-white">
+        <footer class=" text-center text-white">
             <!-- Grid container -->
-            <div class="container p-4 pb-0">
+            <div class=" p-4 pb-0">
                 <!-- Section: Links -->
                 <section class="">
                     <!--Grid row-->
@@ -261,17 +237,17 @@
                                 <a class="footer__title text-white" href="./index.html">Radical Waves</a>
                             </h6>
                             <p class="footer__p">
-                                Radical Waves es una marca nacida en Cordoba Capital,Argentina dedicada 
+                                Radical Waves es una marca nacida en Cordoba Capital,Argentina dedicada
                                 a la moda Surf Skate urbana,que trata de marcar un estilo propio y original.
 
-                            
+
                             </p>
                         </div>
                         <!-- Grid column -->
 
                         <hr class="w-100 clearfix d-md-none" />
 
-                        
+
                         <!-- Grid column -->
 
                         <hr class="w-100 clearfix d-md-none" />
@@ -299,7 +275,8 @@
                         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
                             <h6 class="text-uppercase mb-4 contacto__title">Contacto</h6>
                             <p class="contacto__p"><i class="fas fa-home mr-3"></i> Tupungato 1749,Cordoba,Arg</p>
-                            <p class="contacto__p"><i class="fas fa-envelope mr-3"></i> radicalwavesofficial@gmail.com</p>
+                            <p class="contacto__p"><i class="fas fa-envelope mr-3"></i> radicalwavesofficial@gmail.com
+                            </p>
                             <p class="contacto__p"><i class="fas fa-phone mr-3"></i> 3518079787</p>
                         </div>
                         <!-- Grid column -->
@@ -351,7 +328,7 @@
 
 
 
-
+<script src="./app.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
